apps/minio/overlays/development/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tailnet
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/tags: tag:shared-minio-dev
spec:
  defaultBackend:
    service:
      name: minio-console
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - minio-dev
